--- a/public_html/index.html
+++ b/public_html/index.html
@@ -20,7 +20,7 @@
             Gustavo A. Godoi
         </h2>
         
-        <img src="img/download.jpg" width="200"/>
+        <img src="img/freddykrueger.jpg" width="200"/>
         
         <p>
             <font face="Verdana">
